Remove environment var test... too difficult to get working in Java 17